# applied-ai-system-project

./: README.md  model_card.md  pyproject.toml
assets/: system-diagram.mmd
codereview/: __init__.py  codereview.py  config.py  context.py  llm.py  patcher.py  prompts.py
codereview/tools/: __init__.py  base.py  registry.py  schema.py  tools.py
tests/: test_cli.py  test_llm.py  test_patcher.py
