[project]
name = "codereview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openai>=2.32.0",
    "pydantic-settings>=2.14.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["codereview"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
